--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>First page</title>
 	<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css">
 	<link href="//cdn.bootcss.com/Swiper/3.3.1/css/swiper.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="index.css">
+	<link rel="stylesheet" href="www/index.css">
 	<style>
 		* {
 			font-family: 微软雅黑;
@@ -192,7 +192,7 @@
 	<script src="http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 	<script src="//cdn.bootcss.com/angular.js/1.3.20/angular.min.js"></script>
 	<script src="//cdn.bootcss.com/Swiper/3.3.1/js/swiper.jquery.min.js"></script>
-	<script src="index.js"></script>
+	<script src="www/index.js"></script>
 	<script>
 	</script>
 </body>
