--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 	</style>
 </head>
 
-<body style="background: url('teacherPage/images/blli.png') no-repeat;background-size:cover;" ng-controller='rolecontroller'>
+<body style="background: url('www/teacherPage/images/blli.png') no-repeat;background-size:cover;" ng-controller='rolecontroller'>
     <div id='mainPage' class="container-fluid" ng-controller="kzq1">
 		<nav class="nav navbar navbar-default" style="margin:-5px -15px 0;min-height:40px;">
 			<div class="col-xs-4">
-				<img src="teacherPage/images/logo.png" alt="" style="top: 5px;;position: relative;">
+				<img src="www/teacherPage/images/logo.png" alt="" style="top: 5px;;position: relative;">
 			</div>
 			<div class="col-xs-4"></div>
 			<div class="col-xs-4">
@@ -37,12 +37,12 @@
 		</div>
 		<div class="row" style="margin-top:20px;">
 			<div class="col-xs-3 text-center">
-				<a href="teacherPage/__CWorkRes.html"><img class="img-circle" src="teacherPage/images/rsp.png" alt="作业仓库" style="height:50px;background:#5fb9af;">
+				<a href="www/teacherPage/__CWorkRes.html"><img class="img-circle" src="www/teacherPage/images/rsp.png" alt="作业仓库" style="height:50px;background:#5fb9af;">
 					<p>作业仓库</p>
 				</a>
 			</div>
 			<div class="col-xs-3 text-center stu" style="" data-toggle="modal" data-target="#myModal">
-				<a href=""><img class="img-circle" src="teacherPage/images/noup.png" alt="未提交" style="height:50px;background:#de8f55;">
+				<a href=""><img class="img-circle" src="www/teacherPage/images/noup.png" alt="未提交" style="height:50px;background:#de8f55;">
 					<p>作业领取</p>
 				</a>
 			</div>
@@ -63,22 +63,22 @@
 			</div>
 
 			<div class="col-xs-3 text-center tea">
-				<a href="teacherPage/TMyWork.html"><img class="img-circle" src="teacherPage/images/up.png" alt="已发布" style="height:50px;background:#90cfc7;">
+				<a href="www/teacherPage/TMyWork.html"><img class="img-circle" src="www/teacherPage/images/up.png" alt="已发布" style="height:50px;background:#90cfc7;">
 					<p>已发布</p>
 				</a>
 			</div>
 			<div class="col-xs-3 text-center tea">
-				<a href="teacherPage/TAddWork.html"><img class="img-circle" src="teacherPage/images/aw.png" alt="发布作业" style="height:50px;background:#607154;">
+				<a href="www/teacherPage/TAddWork.html"><img class="img-circle" src="www/teacherPage/images/aw.png" alt="发布作业" style="height:50px;background:#607154;">
 					<p>发布作业</p>
 				</a>
 			</div>
 			<div class="col-xs-3 text-center stu">
-				<a href="teacherPage/SMyWork.html"><img class="img-circle" src="teacherPage/images/all.png" alt="我的作业" style="height:50px;background:#2f534c;">
+				<a href="www/teacherPage/SMyWork.html"><img class="img-circle" src="www/teacherPage/images/all.png" alt="我的作业" style="height:50px;background:#2f534c;">
 					<p>我的作业</p>
 				</a>
 			</div>
 			<div class="col-xs-3 text-center">
-				<a href="teacherPage/__CNoteList.html"><img class="img-circle" src="teacherPage/images/news.png" alt="公告" style="height:50px;background:#687967;">
+				<a href="www/teacherPage/__CNoteList.html"><img class="img-circle" src="www/teacherPage/images/news.png" alt="公告" style="height:50px;background:#687967;">
 					<p>公告</p>
 				</a>
 			</div>
@@ -99,7 +99,7 @@
 		</div>
 		<div class="row" style="margin:0 0 0 2%;">
 			<div ng-repeat="(k,v) in indexWork track by k" class="col-sm-5 col-xs-5 user_fk" style="width:45%;background: url('teacherPage/images/fk.jpg') 100% 100%;height:150px;position:relative;overflow: hidden; text-overflow:ellipsis;margin:8px 2%">
-				<a style="color:white;" href="teacherPage/CWorkResDetail.html?wid={{v.wid}}">
+				<a style="color:white;" href="www/teacherPage/CWorkResDetail.html?wid={{v.wid}}">
 					<div style="text-align:center;word-spacing:1px;font-weight:bold;font-size:16px;width:100%;height:75px;line-height:75px;overflow:hidden;" ng-bind="v.title">
 					</div>
 
@@ -113,16 +113,16 @@
 		<div style='height:96px;' ng-if='indexWork.length==0'></div>
 		<div class="row" style="margin:20px auto;">
 			<div class="col-xs-3 text-center" style="border-right:1px solid white; vertical-align:middle;">
-				<a href="teacherPage/userInfo.html" style="color:white;font-size:0.7em;"><span style="line-height:20px">个人信息</span></a>
+				<a href="www/teacherPage/userInfo.html" style="color:white;font-size:0.7em;"><span style="line-height:20px">个人信息</span></a>
 			</div>
 			<div class="col-xs-3 text-center" style="border-right:1px solid white;vertical-align:middle;">
-				<a href="teacherPage/useHelp.html" style="color:white;font-size:0.7em;"><span style="line-height:20px">帮助支持</span></a>
+				<a href="www/teacherPage/useHelp.html" style="color:white;font-size:0.7em;"><span style="line-height:20px">帮助支持</span></a>
 			</div>
 			<div class="col-xs-3 text-center" style="border-right:1px solid white;vertical-align:middle;">
-				<a href="teacherPage/aboutUs.html" style="color:white;font-size:0.7em;"><span style="line-height:20px">关于我们</span></a>
+				<a href="www/teacherPage/aboutUs.html" style="color:white;font-size:0.7em;"><span style="line-height:20px">关于我们</span></a>
 			</div>
 			<div class="col-xs-3 text-center" style="vertical-align:middle;">
-				<a href="login.html" style="color5:white;font-size:0.7em;"><span style="line-height:20px">后台管理</span></a>
+				<a href="www/login.html" style="color5:white;font-size:0.7em;"><span style="line-height:20px">后台管理</span></a>
 			</div>
 		</div>
 		<div class="footer text-right">
@@ -173,7 +173,7 @@
 						<table class="table table-condensed" style="width:90%;margin-left:5%;word-break: break-all;">
 							<tr ng-repeat='(k,v) in chatResult'>
 								<td style="border-top:none;border-bottom:1px solid rgb(221,221,221)">
-									<a href="teacherPage/result.html?wid={{v.wid}}">
+									<a href="www/teacherPage/result.html?wid={{v.wid}}">
 										<div style="width:60%;font-size:16px;overflow:hidden;height:21px;float:left;">{{v.content}}</div>
 										<div style="float: right;font-size: 10px;width:25%;overflow:hidden;height:18px;text-align:center;position:relative;top:6px;">{{v.nick}}</div>
 										<div style="float: right;font-size: 10px;width:15%;overflow:hidden;height:18px;text-align:right;position:relative;top:6px;">who:</div>
